# ctypesgen

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING  LICENSE  MANIFEST.in  README  README.md  blacken.sh  cparser.py  ctypesgen.py  ctypesparser.py  ctypestemplate.py  preprocessor.py  pyproject.toml  run.py  setup.cfg  setup.py  tox.ini  wrap.py
.github/workflows/: black.yml  flake8.yml  publish-to-pypi.yml  publish.yml  test.yml
branches/python-3/ctypesgencore/: __init__.py  expressions.py  libraryloader.py  old libraryloader.py
branches/python-3/ctypesgencore/parser/: __init__.py  cgrammar.py  cparser.py  ctypesparser.py  datacollectingparser.py  lex.py  pplexer.py  preprocessor.py  yacc.py
branches/python-3/ctypesgencore/printer/: __init__.py  printer.py
branches/python-3/ctypesgencore/processor/: __init__.py
branches/python-3/test/: ctypesgentest.py  math_functions.py  simple_macros.py  structures.py
ci/: install
ctypesgen/: __init__.py  __main__.py  ctypedescs.py  descriptions.py  expressions.py  libraryloader.py  main.py  messages.py  options.py  version.py
ctypesgen/parser/: __init__.py  cdeclarations.py  cgrammar.py  cparser.py  ctypesparser.py  datacollectingparser.py  lex.py  lextab.py  parsetab.py  pplexer.py  preprocessor.py  yacc.py
ctypesgen/printer_json/: printer.py
ctypesgen/printer_python/: defaultheader.py  preamble.py  printer.py
ctypesgen/printer_python/preamble/: 2_5.py  2_7.py  3_2.py
ctypesgen/processor/: dependencies.py  operations.py  pipeline.py
ctypesgen/test/: ctypesgentest.py  gen-parser-outputs  test-parser  testsuite.py
ctypesgen/test/test-headers/: func_int_int.json  func_unnamed_param.json  macro_divide.json  macro_multiply.h  macro_multiply.json  macro_params.h  macro_params.json  macro_stringify.json  macro_subtract.json  macro_ternary.json
ctypesgencore/: __init__.py  ctypedescs.py  descriptions.py  expressions.py  libraryloader.py  messages.py  old libraryloader.py  options.py
ctypesgencore/parser/: __init__.py  cdeclarations.py  cgrammar.py  cparser.py  ctypesparser.py  datacollectingparser.py  lex.py  lextab.py  parsetab.py  pplexer.py  preprocessor.py  yacc.py
ctypesgencore/printer/: __init__.py  defaultheader.py  preamble.py  printer copy.py  printer.py
ctypesgencore/printer_json/: printer.py
ctypesgencore/printer_python/: __init__.py  defaultheader.py  preamble.py  printer.py
ctypesgencore/printer_python/preamble/: 2_7.py
ctypesgencore/processor/: __init__.py  dependencies.py  operations.py  pipeline.py
ctypesgencore/test/: __init__.py  ctypesgentest.py  testsuite.py
debian/: .gitignore  control  ctypesgen.manpages  mk_changelog  mk_manpage  rules
demo/: .gitignore  README.md  demoapp.c  demoapp.py  demolib.c  demolib.h  pydemolib.py
demo/simulinkDLL/: README.md  callGenerator.py  ert_main.c  generate_bindings.py  main.py  myGenerator.py  myParser.py  myPrinter.py  myProcessor.py  rtwtypes.h  test_ctrl.c  test_ctrl.h  test_ctrl.py
docs/: publishing.md  versioning.md
test/: ctypesgentest.py  math_functions.py  structures.py  testsuite.py
test/test-headers/: func_void_void.json  macro_constant.json  macro_mod.h  macro_mod.json  macro_subtract.h  macro_ternary.h  struct.h  struct.json
tests/: .gitignore  ctypesgentest.py  testsuite.py
trunk/: ctypesgen.py  ctypesparser.py  lex.py  preprocessor.py  setup.py  todo.txt  wrap.py
trunk/ctypesgencore/: __init__.py  descriptions.py  expressions.py  libraryloader.py
trunk/ctypesgencore/parser/: cgrammar.py  ctypesparser.py  datacollectingparser.py  lex.py  parsetab.py  pplexer.py  preprocessor.py  yacc.py
trunk/ctypesgencore/printer/: preamble.py  printer.py  test.py
trunk/ctypesgencore/printer_json/: printer.py
trunk/ctypesgencore/processor/: operations.py  pipeline.py
trunk/test/: ctypesgentest.py  gen-parser-outputs  math_functions.py  simple_macros.py  structures.py  testsuite.py
trunk/test/test-headers/: func_int_int.h  macro_divide.h  macro_stringify.h
wiki/: GettingStarted.wiki  HackingTips.wiki  ProjectsUsingctypesgen.wiki  RelatedProjects.wiki
