[build-system]
requires = [
    "setuptools>=44",
    "wheel",
    "setuptools_scm[toml]>=3.4.3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
	write_to = "ctypesgen/VERSION"
	write_to_template = "{version}"

[tool.black]
    line-length = 100
    exclude='.*tab.py|ctypesgen/parser/cgrammar.py|ctypesgen/parser/lex.py|ctypesgen/parser/yacc.py'
    target-version = [ "py38", "py39", "py310", "py311"]

