[build-system]
requires = ["setuptools>=44", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ctypesgen"
description = "Python wrapper generator for ctypes"
license = { text = "BSD-2-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]
dynamic = ["readme", "version"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ctypesgen/ctypesgen"
Repository = "https://github.com/ctypesgen/ctypesgen.git"
Issues = "https://github.com/ctypesgen/ctypesgen/issues"
Changelog = "https://github.com/ctypesgen/ctypesgen/blob/master/CHANGELOG.md"

[project.scripts]
ctypesgen = "ctypesgen.__main__:main"

[tool.setuptools]
package-dir = {}
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.dynamic.readme]
file = ["README.md", "LICENSE", "CHANGELOG.md"]
content-type = "text/markdown"

[tool.setuptools_scm]
write_to = "ctypesgen/VERSION"
write_to_template = "{version}"

[tool.black]
line-length = 100
exclude = '.*tab.py|ctypesgen/parser/cgrammar.py|ctypesgen/parser/lex.py|ctypesgen/parser/yacc.py'
target-version = ["py37", "py38", "py39"]
