[metadata]
name = ctypesgen
license = BSD-2-Clause
description = Python wrapper generator for ctypes
url = https://github.com/davidjamesca/ctypesgen
long_description = ctypesgen reads parses c header files and creates a wrapper for libraries based on what it finds.  Preprocessor macros are handled in a manner consistent with typical c code.  Preprocessor macro functions are translated into Python functions that are then made available to the user of the newly-generated Python wrapper library.
    ctypesgen can also output JSON, which can be used with Mork, which generates bindings for Lua, using the alien module (which binds libffi to Lua).
long_description_content_type = text/plain
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: Build Tools

[options]
packages = find:
include_package_data = True
setup_requires = setuptools>=44; wheel; toml; setuptools_scm>=3.4.3

[options.entry_points]
console_scripts = ctypesgen = ctypesgen.main:main
