[metadata]
name = ctypesgen
license = BSD-2-Clause
description = Python wrapper generator for ctypes
url = https://github.com/ctypesgen/ctypesgen
long_description = file: README.md, LICENSE, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: Build Tools
    Environment :: Console

[options]
packages = find:
package_dir =
include_package_data = True
setup_requires = setuptools>=44; wheel; toml; setuptools_scm>=3.4.3
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts = ctypesgen = ctypesgen.main:main
